Commit initial files

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <img src="photo2.jpeg" alt="Profile Picture" class="profile-pic">
             </div>
         </div>
-        <h1 class="name">Lorem Ipsum</h1>
+        <h1 class="name">Business card</h1>
         <p class="title">Lorem Ipsum</p>
         <div class="social-icons">
             <a href="facebook.com" aria-label="Facebook">
