--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Business Card</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: playfair display, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
         }
+        // <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 400 to 900
+
+        .playfair-display-<uniquifier> {
+        font-family: "Playfair Display", serif;
+        font-optical-sizing: auto;
+        font-weight: <weight>;
+        font-style: normal;
+}
         .container {
             max-width: 400px;
             margin: 0 auto;
@@ -161,13 +173,13 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/240px-2023_Facebook_icon.svg.png" width="30" height="30">
             </a>
             <a href="instagram.com" aria-label="Instagram">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/240px-2023_Facebook_icon.svg.png" width="30" height="30">
+                <img src="instagram.png" width="30" height="30">
             </a>
             <a href="#" aria-label="LinkedIn">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/240px-2023_Facebook_icon.svg.png" width="30" height="30">
+                <img src="LinkedIn.svg" width="30" height="30">
             </a>
             <a href="#" aria-label="Phone">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/240px-2023_Facebook_icon.svg.png" width="30" height="30">
+                <img src="Phone.png" width="30" height="30">
             </a>
         </div>
         <div class="buttons">
